frontend/test/should_fail/cast_string_int.grg
using cast_model;

rule r {
	modify {
	---
		eval {
			def var i:int = (int)"foobar";
		}
	}
}
